--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "mongoose": "^8.16.1",
     "sass": "^1.89.2"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/express-ejs-layouts": "^2.5.4"
   }
 }
