--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^8.16.1",
+    "nodemon": "^3.1.10",
     "sass": "^1.89.2"
   },
   "devDependencies": {
