--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
     "sass": "^1.89.2"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
+    "@types/cookie-parser": "^1.4.9",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
-    "@types/express-ejs-layouts": "^2.5.4"
+    "@types/express-ejs-layouts": "^2.5.4",
+    "@types/express-session": "^1.18.2"
   }
 }
