--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "sass": "^1.89.2"
   },
@@ -16,6 +17,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "@types/express-ejs-layouts": "^2.5.4",
-    "@types/express-session": "^1.18.2"
+    "@types/express-session": "^1.18.2",
+    "@types/multer": "^2.0.0"
   }
 }
