--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "joi": "^18.0.1",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
