--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-session": "^1.18.1",
     "joi": "^18.0.1",
     "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
@@ -22,6 +23,7 @@
     "@types/express": "^5.0.3",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0"
   }
 }
