Début de la mise en place de fullcalendar

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "fullcalendar": "^6.1.19",
     "joi": "^18.0.1",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
